update feed-item labels to correct spacing issue

--- a/assets/sass/_module-explore-section.scss
+++ b/assets/sass/_module-explore-section.scss
@@ -34,7 +34,7 @@
     	padding-top: 14px;
     	padding-bottom: 7px;
     	&:last-child{border-bottom: none;}
-    	.item-title-container, .pub-meta, .item-source-container{
+    	.item-title-container, .badge-container.feed-badge-container, .item-source-container{
       	padding-right: 0;
       	padding-left: 0;
     	}
